fixed position flicker that happens to items below the focused menu item when scrolling

--- a/dev/scss/core/_base.scss
+++ b/dev/scss/core/_base.scss
@@ -8,7 +8,7 @@
   width: 0;
   height: 100vh;
   box-shadow: 0 0 0 rgba($black, 0);
-  background-color: rgba($black, 0.4);
+  background-color: rgba($black, 0.6);
 
   * {
     box-sizing: border-box;
@@ -63,7 +63,7 @@
 body > :not(#valet) {
   backface-visibility: hidden;
   perspective: 1000;
-  transform: translate3d(0, 0, 0), translateZ(0);
+  transform: scale(1);
 
   // @include small-device-size {
   //   padding-bottom: $valet-margin * 3;
@@ -74,6 +74,6 @@ body > :not(#valet) {
 .valet-open {
 
   > :not(#valet) {
-    // filter: blur(3px);
+    filter: blur(3px);
   }
 }
