--- a/dev/scss/core/_side_panel.scss
+++ b/dev/scss/core/_side_panel.scss
@@ -27,7 +27,6 @@
       border-top: 1px solid $white;
       border-bottom: 1px solid $grey;
       border-radius: 0;
-      padding: ($valet-padding * 1.5) $valet-padding;
 
       &.ui-state-focus {
         width: 100%;
@@ -44,6 +43,7 @@
 
     //prevent active flicker of first result while search
     &.searching {
+
       .ui-menu-item:first-child {
         width: 100%;
       }
